--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -50,93 +50,118 @@ html(lang="en")
                   i.fal.fa-search
 
     main
-      #carouselExampleInterval.carousel.slide(data-ride='carousel')
-        .carousel-inner
-          .carousel-item.active(data-interval='1000')
-            .slide-content
-              .img-wrap
-                img.d-block(src='images/Rectangle 1.png', alt='фото')
-              .ovwrap
-                h1 Взыскание дебиторской задолженности
-                p Индивидуальный подход и нацеленность на достижение результата
-                button ПОДРОБНЕЕ
-          .carousel-item(data-interval='2000')
-            .slide-content
-              .img-wrap
-                img.d-block(src='images/Rectangle 125 (1).png', alt='фото')
-              .ovwrap
-                h1 Ликвидация предприятия
-                p Эффективное решение сложных задач
-                button ПОДРОБНЕЕ            
-          .carousel-item(data-interval='2000')
-            .slide-content
-              .img-wrap
-                img.d-block(src='images/Rectangle 125 (2).png', alt='фото')
-              .ovwrap
-                h1 Юридическая консультация
-                p Детальные разъяснения вопросов по ведению бизнеса от <br> профессионалов
-                button ПОДРОБНЕЕ
+      section(class="Debit")
+        #carouselExampleInterval.carousel.slide(data-ride='carousel')
+          .carousel-inner
+            .carousel-item.active(data-interval='1000')
+              .slide-content
+                .img-wrap
+                  img.d-block(src='images/Rectangle 1.png', alt='фото')
+                .ovwrap
+                  h1 Взыскание дебиторской задолженности
+                  p Индивидуальный подход и нацеленность на достижение результата
+                  button ПОДРОБНЕЕ
+            .carousel-item(data-interval='2000')
+              .slide-content
+                .img-wrap
+                  img.d-block(src='images/Rectangle 125 (1).png', alt='фото')
+                .ovwrap
+                  h1 Ликвидация предприятия
+                  p Эффективное решение сложных задач
+                  button ПОДРОБНЕЕ            
+            .carousel-item(data-interval='2000')
+              .slide-content
+                .img-wrap
+                  img.d-block(src='images/Rectangle 125 (2).png', alt='фото')
+                .ovwrap
+                  h1 Юридическая консультация
+                  p Детальные разъяснения вопросов по ведению бизнеса от <br> профессионалов
+                  button ПОДРОБНЕЕ
 
-          .carousel-item(data-interval='2000')
-            .slide-content
-              .img-wrap
-                img.d-block(src='images/Rectangle 125 (3).png', alt='фото')
-              .ovwrap
-                h1 Юридический аутсорсинг
-                p Гарантия своевременности и качества услуг
-                button ПОДРОБНЕЕ     
+            .carousel-item(data-interval='2000')
+              .slide-content
+                .img-wrap
+                  img.d-block(src='images/Rectangle 125 (3).png', alt='фото')
+                .ovwrap
+                  h1 Юридический аутсорсинг
+                  p Гарантия своевременности и качества услуг
+                  button ПОДРОБНЕЕ     
 
-          .carousel-item
-            .slide-content
-              .img-wrap
-                img.d-block(src='images/Rectangle 125 (4).png', alt='фото')
-              .ovwrap
-                h1 Регистрация ООО
-                p Гарантируем минимальные сроки регистрации под ключ 
-                button ПОДРОБНЕЕ      
+            .carousel-item
+              .slide-content
+                .img-wrap
+                  img.d-block(src='images/Rectangle 125 (4).png', alt='фото')
+                .ovwrap
+                  h1 Регистрация ООО
+                  p Гарантируем минимальные сроки регистрации под ключ 
+                  button ПОДРОБНЕЕ      
 
-        a.carousel-control-prev(href='#carouselExampleInterval', role='button', data-slide='prev')
-          span.carousel-control-prev-icon(aria-hidden='true')
-          span.sr-only Previous
+          a.carousel-control-prev(href='#carouselExampleInterval', role='button', data-slide='prev')
+            span.carousel-control-prev-icon(aria-hidden='true')
+            span.sr-only Previous
 
-        a.carousel-control-next(href='#carouselExampleInterval', role='button', data-slide='next')
-          span.carousel-control-next-icon(aria-hidden='true')
-          span.sr-only Next
+          a.carousel-control-next(href='#carouselExampleInterval', role='button', data-slide='next')
+            span.carousel-control-next-icon(aria-hidden='true')
+            span.sr-only Next
 
-      div(class="cardi")
-        div(class="card-card1")
-          div(class="cardf-ol")
-            div(class="card-img")
-              img(src="images/Иконка-карточка.svg", alt="иконка")
-          div(class="card-wrap")
-            p Надежная защита 
+        div(class="cardi")
+          div(class="card-card1")
+            div(class="cardf-ol")
+              div(class="card-img")
+                img(src="images/Иконка-карточка.svg", alt="иконка")
+            div(class="card-wrap")
+              p Надежная защита 
 
-        div(class="card-card2")
-          div(class="cardf-olg")
-            div(class="card-imge")
-              img(src="images/Иконка-карточка (1).svg", alt="иконка")
-          div(class="card-wrape")
-            p Безупречная репутация
+          div(class="card-card2")
+            div(class="cardf-olg")
+              div(class="card-imge")
+                img(src="images/Иконка-карточка (1).svg", alt="иконка")
+            div(class="card-wrape")
+              p Безупречная репутация
 
-        div(class="card-card3")
-          div(class="cardf-olT")
-            div(class="card-imgT")
-              img(src="images/Иконка-карточка (2).svg", alt="иконка")
-          div(class="card-wrapT")
-            p Надежная защита 
+          div(class="card-card3")
+            div(class="cardf-olT")
+              div(class="card-imgT")
+                img(src="images/Иконка-карточка (2).svg", alt="иконка")
+            div(class="card-wrapT")
+              p Надежная защита 
 
-        div(class="card-card4")    
-          div(class="cardZ-olZ")
-            div(class="cardZ-imgZ")
-              img(src="images/Иконка-карточка (4).svg", alt="иконка")
-          div(class="card-wrapZ")
-            p Абсолютная конфиденциальность
+          div(class="card-card4")    
+            div(class="cardZ-olZ")
+              div(class="cardZ-imgZ")
+                img(src="images/Иконка-карточка (4).svg", alt="иконка")
+            div(class="card-wrapZ")
+              p Абсолютная конфиденциальность
 
+      section(class="busines")
+        .container
+         .row(class="Bus")
+          .col-md-6.BU
+            h1(class="busS") Юридическое сопровождение бизнеса от «МК-Правовые технологии»
+            p(class="busS-tex") Главный принцип нашей работы - качество. Постоянно следовать ему помогает сплоченная команда талантливых и энергичных сотрудников, способных сообща заниматься сложными проектами, никогда не допуская сбоев в работе. <br> <br> Мы обеспечиваем максимальный уровень профессионального обслуживания, который можно ожидать от крупной юридической фирмы.<br> <br> Нашу фирму отличают яркая индивидуальность и следование модели эффективного юридического обслуживания. Благодаря профессиональной гибкости мы находим творческие решения как обычных вопросов, так и неординарных проблем, возникающих у наших клиентов. <br> <br> Все наши рекомендации основаны на глубоких академических знаниях и опыте практического применения в хозяйственном праве.
+          .col-md-5.BUr
+            img(class="busS-im" src="images/Rectangle 141.png", alt="картинка")
 
+      
+      h1(class="found") Основные направления деятельности
 
-   
-        
-
+      section(class="grid-line")
+        div(class="gr-blo")
+          div(class="detail")
+            div(class="det")
+              h5(class="det-wrap") Взыскание долгов
+              p(class="det-wr") ПОДРОБНЕЕ
+            div(class="deta")
+              img(class="de-im" src="images/dept-money.svg", alt="картинка")
+          div(class="detail")
+          div(class="detail")
+          div(class="detail")
+          div(class="detail")
+          div(class="detail")
+          div(class="detail")
+          div(class="detail")
+          div(class="detail")        
+        button Все услуги
       
               
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
