--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -153,17 +153,87 @@ html(lang="en")
               p(class="det-wr") ПОДРОБНЕЕ
             div(class="deta")
               img(class="de-im" src="images/dept-money.svg", alt="картинка")
+
           div(class="detail")
+            div(class="det")
+              h5(class="det-wrap") Реорганизация бизнеса
+              p(class="det-wr") ПОДРОБНЕЕ
+            div(class="deta")
+              img(class="de-im" src="images/Vector-2.svg", alt="картинка")
+          
           div(class="detail")
+            div(class="det")
+              h5(class="det-wrap") Продажа бизнеса
+              p(class="det-wr") ПОДРОБНЕЕ
+            div(class="deta")
+              img(class="de-im" src="images/Group-3.svg", alt="картинка")
+
           div(class="detail")
+            div(class="det")
+              h5(class="det-wrapr") Юридические консультации
+              p(class="det-wr") ПОДРОБНЕЕ
+            div(class="deta")
+              img(class="de-im" src="images/Union-4.svg", alt="картинка")
+
           div(class="detail")
+            div(class="det")
+              h5(class="det-wrapr") Ликвидация организаций
+              p(class="det-wr") ПОДРОБНЕЕ
+            div(class="deta")
+              img(class="de-im" src="images/Group-5.svg", alt="картинка")
+
           div(class="detail")
+            div(class="det")
+              h5(class="det-wrapr") Разработка <br> договоров
+              p(class="det-wr") ПОДРОБНЕЕ
+            div(class="deta")
+              img(class="de-im" src="images/Group-6.svg", alt="картинка")
+
           div(class="detail")
+            div(class="det")
+              h5(class="det-wrapr") Регистрация бизнеса
+              p(class="det-wr") ПОДРОБНЕЕ
+            div(class="deta")
+              img(class="de-im" src="images/stamp-7.svg", alt="картинка")
+
           div(class="detail")
-          div(class="detail")        
-        button Все услуги
-      
-              
+            div(class="det")
+              h5(class="det-wrapr") Юридический аутсорсинг
+              p(class="det-wr") ПОДРОБНЕЕ
+            div(class="deta")
+              img(class="de-im" src="images/Group -8.svg", alt="картинка")
+
+          div(class="detail") 
+            div(class="det")
+              h5(class="det-wrapr") Аттестация в строительстве
+              p(class="det-wr") ПОДРОБНЕЕ
+            div(class="deta")
+              img(class="de-im" src="images/Dollar.svg", alt="картинка")       
+        button(class="DEta") Все услуги
+
+        .container
+         .row(class="detu-wrap")
+          .col-4
+            h2(class="wrap--a") Основные направления деятельности
+          .col-8
+            p(class="wrap-D") Основной принцип нашей работы – максимальная открытость и доверительные отношения с каждым клиентом, с тем чтобы от начала и до конца совместной работы, не возникало никакого недопонимания. Мы ставим целью не только привлечение новых клиентов, но и поддержание длительных партнерских отношений с клиентами, которые уже воспользовались нашими услугами.<br> <br> Быстрота анализа и профессиональных действий наших юристов обеспечивают успешное решение, казалось бы, неразрешимых вопросов. Богатые знания и солидный опыт позволяют нам оказывать комплексную правовую помощь в ситуациях любой сложности.
+
+        section(class="imagKar")
+          #carouselExampleControls.carousel.slide(data-ride='carousel')
+            .carousel-inner
+              .carousel-item.active
+                img.d-block.w-100(src='...' alt='...')
+              .carousel-item
+                img.d-block.w-100(src='...' alt='...')
+              .carousel-item
+                img.d-block.w-100(src='...' alt='...')
+            a.carousel-control-prev(href='#carouselExampleControls' role='button' data-slide='prev')
+              span.carousel-control-prev-icon(aria-hidden='true')
+              span.sr-only Previous
+            a.carousel-control-next(href='#carouselExampleControls' role='button' data-slide='next')
+              span.carousel-control-next-icon(aria-hidden='true')
+              span.sr-only Next
+
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js' integrity='sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI' crossorigin='anonymous')
