--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -56,7 +56,7 @@ html(lang="en")
             .carousel-item.active(data-interval='1000')
               .slide-content
                 .img-wrap
-                  img.d-block(src='images/Rectangle 1.png', alt='фото')
+                  img.d-block(src='images/Rectangle 1.png',width='100%', height='100%', alt='фото')
                 .ovwrap
                   h1 Взыскание дебиторской задолженности
                   p Индивидуальный подход и нацеленность на достижение результата
@@ -64,7 +64,7 @@ html(lang="en")
             .carousel-item(data-interval='2000')
               .slide-content
                 .img-wrap
-                  img.d-block(src='images/Rectangle 125 (1).png', alt='фото')
+                  img.d-block(src='images/Rectangle 125 (1).png',width='100%', alt='фото')
                 .ovwrap
                   h1 Ликвидация предприятия
                   p Эффективное решение сложных задач
@@ -72,7 +72,7 @@ html(lang="en")
             .carousel-item(data-interval='2000')
               .slide-content
                 .img-wrap
-                  img.d-block(src='images/Rectangle 125 (2).png', alt='фото')
+                  img.d-block(src='images/Rectangle 125 (2).png',width='100%', alt='фото')
                 .ovwrap
                   h1 Юридическая консультация
                   p Детальные разъяснения вопросов по ведению бизнеса от <br> профессионалов
@@ -81,7 +81,7 @@ html(lang="en")
             .carousel-item(data-interval='2000')
               .slide-content
                 .img-wrap
-                  img.d-block(src='images/Rectangle 125 (3).png', alt='фото')
+                  img.d-block(src='images/Rectangle 125 (3).png',width='100%', alt='фото')
                 .ovwrap
                   h1 Юридический аутсорсинг
                   p Гарантия своевременности и качества услуг
@@ -90,7 +90,7 @@ html(lang="en")
             .carousel-item
               .slide-content
                 .img-wrap
-                  img.d-block(src='images/Rectangle 125 (4).png', alt='фото')
+                  img.d-block(src='images/Rectangle 125 (4).png',width='100%', alt='фото')
                 .ovwrap
                   h1 Регистрация ООО
                   p Гарантируем минимальные сроки регистрации под ключ 
@@ -104,112 +104,114 @@ html(lang="en")
             span.carousel-control-next-icon(aria-hidden='true')
             span.sr-only Next
 
-        div(class="cardi")
-          div(class="card-card1")
-            div(class="cardf-ol")
-              div(class="card-img")
-                img(src="images/Иконка-карточка.svg", alt="иконка")
-            div(class="card-wrap")
-              p Надежная защита 
+        .section(class="CBuss")
+          div(class="cardi")
+            div(class="card-card1")
+              div(class="cardf-ol")
+                div(class="card-img")
+                  img(src="images/Иконка-карточка.svg", alt="иконка")
+              div(class="card-wrap")
+                p Надежная защита 
 
-          div(class="card-card2")
-            div(class="cardf-olg")
-              div(class="card-imge")
-                img(src="images/Иконка-карточка (1).svg", alt="иконка")
-            div(class="card-wrape")
-              p Безупречная репутация
+            div(class="card-card2")
+              div(class="cardf-olg")
+                div(class="card-imge")
+                  img(src="images/Иконка-карточка (1).svg", alt="иконка")
+              div(class="card-wrape")
+                p Безупречная репутация
 
-          div(class="card-card3")
-            div(class="cardf-olT")
-              div(class="card-imgT")
-                img(src="images/Иконка-карточка (2).svg", alt="иконка")
-            div(class="card-wrapT")
-              p Надежная защита 
+            div(class="card-card3")
+              div(class="cardf-olT")
+                div(class="card-imgT")
+                  img(src="images/Иконка-карточка (2).svg", alt="иконка")
+              div(class="card-wrapT")
+                p Надежная защита 
 
-          div(class="card-card4")    
-            div(class="cardZ-olZ")
-              div(class="cardZ-imgZ")
-                img(src="images/Иконка-карточка (4).svg", alt="иконка")
-            div(class="card-wrapZ")
-              p Абсолютная конфиденциальность
+            div(class="card-card4")    
+              div(class="cardZ-olZ")
+                div(class="cardZ-imgZ")
+                  img(src="images/Иконка-карточка (4).svg", alt="иконка")
+              div(class="card-wrapZ")
+                p Абсолютная конфиденциальность
 
-      section(class="busines")
-        .container
-         .row(class="Bus")
-          .col-md-6.BU
-            h1(class="busS") Юридическое сопровождение бизнеса от «МК-Правовые технологии»
-            p(class="busS-tex") Главный принцип нашей работы - качество. Постоянно следовать ему помогает сплоченная команда талантливых и энергичных сотрудников, способных сообща заниматься сложными проектами, никогда не допуская сбоев в работе. <br> <br> Мы обеспечиваем максимальный уровень профессионального обслуживания, который можно ожидать от крупной юридической фирмы.<br> <br> Нашу фирму отличают яркая индивидуальность и следование модели эффективного юридического обслуживания. Благодаря профессиональной гибкости мы находим творческие решения как обычных вопросов, так и неординарных проблем, возникающих у наших клиентов. <br> <br> Все наши рекомендации основаны на глубоких академических знаниях и опыте практического применения в хозяйственном праве.
-          .col-md-5.BUr
-            img(class="busS-im" src="images/Rectangle 141.png", alt="картинка")
+          div(class="busines")
+            .container(class="bussin")
+              .row(class="Bus")
+                .col-md-6.BU
+                  h1(class="busS") Юридическое сопровождение бизнеса от «МК-Правовые технологии»
+                  p(class="busS-tex") Главный принцип нашей работы - качество. Постоянно следовать ему помогает сплоченная команда талантливых и энергичных сотрудников, способных сообща заниматься сложными проектами, никогда не допуская сбоев в работе. <br> <br> Мы обеспечиваем максимальный уровень профессионального обслуживания, который можно ожидать от крупной юридической фирмы.<br> <br> Нашу фирму отличают яркая индивидуальность и следование модели эффективного юридического обслуживания. Благодаря профессиональной гибкости мы находим творческие решения как обычных вопросов, так и неординарных проблем, возникающих у наших клиентов. <br> <br> Все наши рекомендации основаны на глубоких академических знаниях и опыте практического применения в хозяйственном праве.
+                .col-md-5.BUr
+                  img(class="busS-im" src="images/Rectangle 141.png", alt="картинка")
 
-      
-      h1(class="found") Основные направления деятельности
+      .container
+        h1(class="found") Основные направления деятельности
 
       section(class="grid-line")
-        div(class="gr-blo")
-          div(class="detail")
-            div(class="det")
-              h5(class="det-wrap") Взыскание долгов
-              p(class="det-wr") ПОДРОБНЕЕ
-            div(class="deta")
-              img(class="de-im" src="images/dept-money.svg", alt="картинка")
+        .container
+          div(class="gr-blo")
+            div(class="detail")
+              div(class="det")
+                h5(class="det-wrap") Взыскание долгов
+                p(class="det-wr") ПОДРОБНЕЕ
+              div(class="deta")
+                img(class="de-im" src="images/dept-money.svg", alt="картинка")
 
-          div(class="detail")
-            div(class="det")
-              h5(class="det-wrap") Реорганизация бизнеса
-              p(class="det-wr") ПОДРОБНЕЕ
-            div(class="deta")
-              img(class="de-im" src="images/Vector-2.svg", alt="картинка")
-          
-          div(class="detail")
-            div(class="det")
-              h5(class="det-wrap") Продажа бизнеса
-              p(class="det-wr") ПОДРОБНЕЕ
-            div(class="deta")
-              img(class="de-im" src="images/Group-3.svg", alt="картинка")
+            div(class="detail")
+              div(class="det")
+                h5(class="det-wrap") Реорганизация бизнеса
+                p(class="det-wr") ПОДРОБНЕЕ
+              div(class="deta")
+                img(class="de-im" src="images/Vector-2.svg", alt="картинка")
+            
+            div(class="detail")
+              div(class="det")
+                h5(class="det-wrap") Продажа бизнеса
+                p(class="det-wr") ПОДРОБНЕЕ
+              div(class="deta")
+                img(class="de-im" src="images/Group-3.svg", alt="картинка")
 
-          div(class="detail")
-            div(class="det")
-              h5(class="det-wrapr") Юридические консультации
-              p(class="det-wr") ПОДРОБНЕЕ
-            div(class="deta")
-              img(class="de-im" src="images/Union-4.svg", alt="картинка")
+            div(class="detail")
+              div(class="det")
+                h5(class="det-wrapr") Юридические консультации
+                p(class="det-wr") ПОДРОБНЕЕ
+              div(class="deta")
+                img(class="de-im" src="images/Union-4.svg", alt="картинка")
 
-          div(class="detail")
-            div(class="det")
-              h5(class="det-wrapr") Ликвидация организаций
-              p(class="det-wr") ПОДРОБНЕЕ
-            div(class="deta")
-              img(class="de-im" src="images/Group-5.svg", alt="картинка")
+            div(class="detail")
+              div(class="det")
+                h5(class="det-wrapr") Ликвидация организаций
+                p(class="det-wr") ПОДРОБНЕЕ
+              div(class="deta")
+                img(class="de-im" src="images/Group-5.svg", alt="картинка")
 
-          div(class="detail")
-            div(class="det")
-              h5(class="det-wrapr") Разработка <br> договоров
-              p(class="det-wr") ПОДРОБНЕЕ
-            div(class="deta")
-              img(class="de-im" src="images/Group-6.svg", alt="картинка")
+            div(class="detail")
+              div(class="det")
+                h5(class="det-wrapr") Разработка <br> договоров
+                p(class="det-wr") ПОДРОБНЕЕ
+              div(class="deta")
+                img(class="de-im" src="images/Group-6.svg", alt="картинка")
 
-          div(class="detail")
-            div(class="det")
-              h5(class="det-wrapr") Регистрация бизнеса
-              p(class="det-wr") ПОДРОБНЕЕ
-            div(class="deta")
-              img(class="de-im" src="images/stamp-7.svg", alt="картинка")
+            div(class="detail")
+              div(class="det")
+                h5(class="det-wrapr") Регистрация бизнеса
+                p(class="det-wr") ПОДРОБНЕЕ
+              div(class="deta")
+                img(class="de-im" src="images/stamp-7.svg", alt="картинка")
 
-          div(class="detail")
-            div(class="det")
-              h5(class="det-wrapr") Юридический аутсорсинг
-              p(class="det-wr") ПОДРОБНЕЕ
-            div(class="deta")
-              img(class="de-im" src="images/Group -8.svg", alt="картинка")
+            div(class="detail")
+              div(class="det")
+                h5(class="det-wrapr") Юридический аутсорсинг
+                p(class="det-wr") ПОДРОБНЕЕ
+              div(class="deta")
+                img(class="de-im" src="images/Group -8.svg", alt="картинка")
 
-          div(class="detail") 
-            div(class="det")
-              h5(class="det-wrapr") Аттестация в строительстве
-              p(class="det-wr") ПОДРОБНЕЕ
-            div(class="deta")
-              img(class="de-im" src="images/Dollar.svg", alt="картинка")       
-        button(class="DEta") Все услуги
+            div(class="detail") 
+              div(class="det")
+                h5(class="det-wrapr") Аттестация в строительстве
+                p(class="det-wr") ПОДРОБНЕЕ
+              div(class="deta")
+                img(class="de-im" src="images/Dollar.svg", alt="картинка")       
+          button(class="DEta") Все услуги
 
         .container
          .row(class="detu-wrap")
