--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,14 +1,14 @@
 body
   margin: 0
-  background: #E5E5E5 !important
-  width: 1920px
+  background:#E5E5E5 !important
 
-header, main, footer
+header,main,footer
   max-width: 1920px
   margin: 0 auto
 
 header
   background: #FFFFFF
+
 
 .row
   padding-top: 16px
@@ -56,12 +56,14 @@ header
 
 .img-wrap
   position: relative
+  
  
-
 .ovwrap 
+  margin: 0 auto
+  width: 1170px
   position: absolute 
-  top: 160px
-  left: 395px
+  top: 12em
+  left: 7em
 
   h1 
     font-family: 'Commissioner', sans-serif
@@ -99,14 +101,14 @@ button
   border: none
 
 .carousel-control-prev  
-  left: 405px !important
-  top: 411px !important
+  left: 8em !important
+  top: 25em !important
   width: 25px !important
 
   
 .carousel-control-next
-  left: 455px  
-  top: 411px !important
+  left: 10em !important
+  top: 25em !important
   width: 25px !important
 
 .carousel-control-prev-icon  
@@ -118,9 +120,10 @@ button
 .cardi
   display: flex
   justify-content: space-between
-  margin: 0px 375px 0px 375px
-  position: absolute 
-  top: 740px
+  margin: 0 auto
+  width: 1170px
+  z-index: 99999
+  margin-top: -68px
 
 .card-card1
   width: 270px
@@ -284,19 +287,23 @@ button
     color: rgba(0, 0, 0, 0.75)   
     width: 230px
 
+
 .busines
-  width: 1170px
   margin: 0 auto 
-  background: #FFFFFF
+
 .Bus
-  margin-top: 295px 
+  margin-top: 100px 
   padding: 0    
   margin-bottom: 100px 
+  background: #FFFFFF
 
 .BU   
   margin-right: -25px
   margin-left: 55px !important
   margin-top: 50px
+
+.bussin
+  padding: 0 !important
 
 .busS
   font-family: 'Commissioner', sans-serif
@@ -322,7 +329,6 @@ button
   padding-left: 55px !important
 
 .found
-  margin-left: 375px
   margin-bottom: 35px
   font-family: 'Commissioner' sans-serif
   font-style: normal
@@ -333,8 +339,7 @@ button
   color: rgba(0, 0, 0, 0.9)
 
 .grid-line
-  padding-left: 375px
-  padding-right: 375px 
+   
 
 .gr-blo
   display: grid
@@ -430,3 +435,8 @@ button
     padding: 0 !important
   .col-8
     padding: 0 !important
+
+
+.container
+  max-width: 1170px
+  margin: 0 auto  
